# speect

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  HOWTO_DITZ  INSTALL  LICENSE  NEWS  README  TODO  clean_files  git-ditz.sh
docs/: CMakeLists.txt  Doxyfile  Makefile  about.rst  api.rst  clean_files  conf.py  contents.rst  download.rst  examples.rst  getting_started.rst  installation.rst  license.rst  make.bat  make_doxygen  make_me  voicetools.rst
docs/_static/: default.css  index.doc  logo.xcf  speect_arch.dia  tts_conversion.dia  voice.dia
docs/_templates/: index.html  indexsidebar.html  layout.html
docs/config/: Doxyfile.in  clean_files
docs/doxygen/: Doxyfile
docs/figures/: architecture.dia  hrg.dia  hrg.shared.dia  hrg_complex.dia  tts_con.dia
docs/python/: clean_files
docs/python/engine/: index.rst  misc.rst  sfeatproc.rst  sitem.rst  smap.rst  splugin.rst  srelation.rst  sutterance.rst  suttproc.rst  svoice.rst
docs/python/plugins/: arrays.rst  audio.rst  featproc_callback.rst  index.rst  phoneset.rst  pyobject.rst  riff.rst  tracks.rst  uttproc_callback.rst
docs/source/: conf.all.py  conf.c.engine.py  conf.py  conf.python.engine.py  contents.c.engine.rst  contents.rst  copyright.rst  download.rst  index.rst  installation.rst  object_system_todo.rst.todo  python_quick_start.rst  toc_complete.rst  todo.rst
docs/source/.static/: doxybridge.css  speect_objects.css  speect_p.css
docs/source/api/: main.all.rst  main.c.engine.rst  main.python.engine.rst  main.rst
docs/source/examples/: main.all.rst  main.c.engine.rst  main.rst
docs/source/topics/: architecture_topic.rst  cmake_options_topic.rst  directory_layout_topic.rst  errdbg_topic.rst  errdbg_topic_c.rst  errdbg_topic_python.rst  hrg_topic.c.engine.rst  hrg_topic.python.engine.rst  hrg_topic.rst  hrg_topic_c.rst  hrg_topic_python.rst  init_logging.rst  init_logging_topic.rst  init_logging_topic_c.rst  init_logging_topic_python.rst  introduction_topic.rst  layout_example.h  main.c.engine.rst  main.rst  object_system_topic.rst  plugins_topic.rst  processors_topic.c.engine.rst  processors_topic.python.engine.rst  processors_topic.rst  processors_topic_c.rst  processors_topic_python.rst  reference_counting_topic.rst  style_guide_topic.rst  voice_def.rst  voice_topic.rst  voice_topic_python.rst  voicetools_topic.rst
docs/sphinx_ext/doxybridge/: README.rst  factories.py  project.py  utils.py
docs/sphinxext/: clean_files
docs/sphinxext/doxybridge/: LICENSE  __init__.py
engine/: AUTHORS  CMakeLists.txt  COPYING  Doxyfile  INSTALL  LICENSE  NEWS  README  clean_files
engine/cmake/: build.cmake  clean_files  compilers.cmake  custom.cmake  dll.cmake  docs.cmake  engineAbstractionDSO.cmake  engineAbstractionEnvVar.cmake  engineAbstractionMMap.cmake  engineAbstractionPaths.cmake  engineAbstractionStrings.cmake  engineAbstractionThreads.cmake  engineAbstractionTypes.cmake  engineCMakeConf.cmake  engineInfoFiles.cmake  engineIniFile.cmake  engineIniLoader.cmake  engineLibrary.cmake  enginePluginPathFile.cmake  enginePluginPathLoader.cmake  engineSources.cmake  engineUninstall.cmake  engineVersion.cmake  inifile.cmake  libspct.cmake  main_ini.cmake  mmap.cmake  options.cmake  path.cmake  plugin_path.cmake  sources.cmake  speect_conf.cmake  system.cmake  threads.cmake  toolchain-mingw.cmake  types.cmake  uninstall.cmake  version.cmake
engine/config/: SpeectConf.cmake.in  cmake_uninstall.cmake.in  dynamic_loading_impl.h.in  envvar_impl.h.in  error.log.in  ini.c.in  mmapfile_impl.h.in  path_impl.h.in  plugin.lib  plugin_path.c.in  plugin_path_install.cmake.in  spctconfig.h.in  speect.ini.in  speect_conf_install.cmake.in  speect_ini_install.cmake.in  strings_impl.h.in  threads_impl.h.in  types_impl.h.in  version.h.in
engine/doc/: clean_files  index.doc
engine/examples/: CMakeLists.txt  clean_files
engine/examples/base/: CMakeLists.txt  clean_files
engine/examples/containers/: CMakeLists.txt  list_iteration_example.c
engine/examples/datasources/: CMakeLists.txt  datasource_example.c
engine/examples/hrg/: CMakeLists.txt  create_docs_example.c  create_utt_example.c
engine/examples/utils/: CMakeLists.txt  file_tokenizer.c  string_tokenizer.c  test_file.txt
engine/src/: clean_files  speect.h
engine/src/base/: base.c  base.h  clean_files
engine/src/containers/: clean_files  container.c  container.h  containers.c  containers.h  iterator.c  iterator.h
engine/src/datasources/: clean_files  data_reader.c  data_reader.h  data_source.c  data_source.h  data_writer.c  data_writer.h  datasources.c  datasources.h  file_source.c  file_source.h  generic_source.c  generic_source.h  load_int.c  load_int.h  load_real.c  load_real.h  mmapfile.h  mmapfile_source.c  mmapfile_source.h
engine/src/hrg/: .kdbgrc.item.c  clean_files  hrg.c  hrg.h  hrg_defs.h  item.c  item.h  item_content.c  item_content.h  item_path.c  item_path.h  relation.c  relation.h  utterance.c  utterance.h
engine/src/include/: clean_files  (+4 more)
engine/swig/: CMakeLists.txt
engine/tests/: CMakeLists.txt  clean_files  init_speect.c  speect_test.c  syll_test.c  synth_test.c  synth_threads_test.c
plugins/: CMakeLists.txt  COPYING  INSTALL  LICENSE  README  clean_files
plugins/acoustic/: CMakeLists.txt  clean_files
plugins/cmake/: PluginConf.cmake.in  Speect.cmake  build.cmake  clean_files  compilers.cmake  custom.cmake  options.cmake  plugin.cmake  pluginFunctions.cmake  pluginOptions.cmake  plugin_conf.cmake
plugins/config/: pluginConf.cmake.in  pluginInstall.cmake.in  plugin_info.h.in
plugins/languages/: CMakeLists.txt  clean_files
plugins/linguistic/: CMakeLists.txt  clean_files
plugins/processors/: CMakeLists.txt  clean_files
plugins/serialization/: CMakeLists.txt  clean_files
plugins/template/: CMakeLists.txt
plugins/utils/: CMakeLists.txt  clean_files
swig/: CMakeLists.txt  clean_files
swig/cmake/: swigCommonFunctions.cmake
swig/python/: CMakeLists.txt  README  clean_files  client.py  phoneset_example.py  server.conf.example  server.py  test_utt_proc_callback.py  track_example.py
(+2027 files in other folders)
