######################################################################################
##                                                                                  ##
## AUTHOR  : Aby Louw                                                               ##
## DATE    : June 2010                                                              ##
##                                                                                  ##
######################################################################################
##                                                                                  ##
## CMakeList for Speect Wrappers helper files                                       ##
##                                                                                  ##
##                                                                                  ##
######################################################################################

#------------------------------------------------------------------------------------#
#                   Include wrappers for different languages                         #
#------------------------------------------------------------------------------------#

if(WANT_PYTHON_WRAPPER)
  add_subdirectory(python)
endif(WANT_PYTHON_WRAPPER)
