######################################################################################
##                                                                                  ##
## AUTHOR  : Aby Louw                                                               ##
## DATE    : June 2010                                                              ##
##                                                                                  ##
######################################################################################
##                                                                                  ##
## CMakeList for Speect Engine examples                                             ##
##                                                                                  ##
##                                                                                  ##
######################################################################################


#------------------------------------------------------------------------------------#
#                        Include example sub directories                             #
#------------------------------------------------------------------------------------#

add_subdirectory(base)
add_subdirectory(containers)
add_subdirectory(datasources)
add_subdirectory(hrg)

