######################################################################################
##                                                                                  ##
## AUTHOR  : Aby Louw                                                               ##
## DATE    : December 2009                                                          ##
##                                                                                  ##
######################################################################################
##                                                                                  ##
## CMakeList for Speect Wrappers                                                    ##
##                                                                                  ##
##                                                                                  ##
######################################################################################


#------------------------------------------------------------------------------------#
#                   Include wrappers for different languages                         #
#------------------------------------------------------------------------------------#

if(SPEECT_WRAP_PYTHON)
  add_subdirectory(python)
endif(SPEECT_WRAP_PYTHON)
